Implement content switcher control.

--- a/App.xaml
+++ b/App.xaml
@@ -14,11 +14,6 @@
                         <misc:Bootstrapper />
                     </s:ApplicationLoader.Bootstrapper>
                 </s:ApplicationLoader>
-                <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Dark.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/Resources/Resources.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/Styles/Styles.xaml"/>
-                <ResourceDictionary Source="pack://application:,,,/Templates/Templates.xaml"/>
                 <ResourceDictionary>
                     <converters:IntThresholdConverter x:Key="IntThreshold"/>
                     <converters:MultiBoolToVisibilityConverter x:Key="MultiBoolToVisibility"/>
@@ -28,8 +23,14 @@
                     <converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibility"/>
                     <converters:NullToVisibilityConverter x:Key="NullToVisibility"/>
                     <converters:InverseNullToVisibilityConverter x:Key="InverseNullToVisibility"/>
+                    <converters:NullToBoolConverter x:Key="NullToBoolConverter"/>
                     <flags:CountryIdToFlagImageSourceConverter x:Key="CountryIdToFlagImageSource"/>
                 </ResourceDictionary>
+                <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Dark.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Resources/Resources.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Styles/Styles.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Templates/Templates.xaml"/>
             </ResourceDictionary.MergedDictionaries>
             <!-- Color Overrides -->
             <Color x:Key="{x:Static adonisUi:Colors.AccentColor}">#E10600</Color>
