--- a/Features/Calendar/RaceView.xaml
+++ b/Features/Calendar/RaceView.xaml
@@ -101,20 +101,21 @@
                                 x:Name="Border" />
                         <Grid Grid.Row="1" Margin="0 10 0 10">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition />
-                                <ColumnDefinition />
+                                <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <controls:HighlightableTextBlock Grid.Column="0"
                                                              Text="{Binding Name}" />
-                            <controls:HighlightableTextBlock Grid.Column="2"
-                                                             HorizontalAlignment="Right"
-                                                             Text="{Binding SessionTime.LocalDateTime, StringFormat={x:Static misc:Constants.LongTimeFormat24Hour}}"
-                                                             Visibility="{Binding DataContext.Use24HourClock, RelativeSource={RelativeSource FindAncestor, AncestorType=Expander}, Converter={StaticResource BooleanToVisibility}, Mode=TwoWay}"/>
-                            <controls:HighlightableTextBlock Grid.Column="2"
-                                                             HorizontalAlignment="Right"
-                                                             Text="{Binding SessionTime.LocalDateTime, StringFormat={x:Static misc:Constants.LongTimeFormat12Hour}}" 
-                                                             Visibility="{Binding DataContext.Use24HourClock, RelativeSource={RelativeSource FindAncestor, AncestorType=Expander}, Converter={StaticResource InverseBooleanToVisibility}, Mode=TwoWay}"/>
+                            <controls:ContentSwitcher Grid.Column="1"
+                                                      HorizontalAlignment="Right"
+                                                      UseAlternateContent="{Binding DataContext.Use24HourClock, RelativeSource={RelativeSource FindAncestor, AncestorType=Expander}}">
+                                <controls:ContentSwitcher.DefaultContent>
+                                    <controls:HighlightableTextBlock Text="{Binding SessionTime.LocalDateTime, StringFormat={x:Static misc:Constants.LongTimeFormat12Hour}}"/>
+                                </controls:ContentSwitcher.DefaultContent>
+                                <controls:ContentSwitcher.AlternateContent>
+                                    <controls:HighlightableTextBlock Text="{Binding SessionTime.LocalDateTime, StringFormat={x:Static misc:Constants.LongTimeFormat24Hour}}" />
+                                </controls:ContentSwitcher.AlternateContent>
+                            </controls:ContentSwitcher>
                         </Grid>
                     </Grid>
                     <DataTemplate.Triggers>
