--- a/Styles/Styles.xaml
+++ b/Styles/Styles.xaml
@@ -8,6 +8,7 @@
         <ResourceDictionary Source="pack://application:,,,/Styles/WindowIconToggleButton.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Styles/TransitioningContentControl.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Styles/ListBoxItemStyle.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/Styles/ContentSwitcher.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     <Style BasedOn="{StaticResource Styles.CountdownElement}" TargetType="{x:Type controls:CountdownElement}"/>
     <Style BasedOn="{StaticResource Styles.CountdownControl}" TargetType="{x:Type controls:CountdownControl}"/>
