--- a/Features/Root/WindowView.xaml
+++ b/Features/Root/WindowView.xaml
@@ -91,6 +91,8 @@
                                                    Duration="0:0:0.25"
                                                    HorizontalAlignment="Stretch"
                                                    HorizontalContentAlignment="Stretch"
+                                                   VerticalAlignment="Stretch"
+                                                   VerticalContentAlignment="Stretch"
                                                    s:View.Model="{Binding ActiveViewModel, IsAsync=True}" />
         </Grid>
     </Grid>
