--- a/Features/Calendar/CalendarRootView.xaml
+++ b/Features/Calendar/CalendarRootView.xaml
@@ -16,7 +16,8 @@
     <Grid.Resources>
         <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
             <Setter Property="HorizontalContentAlignment" Value="Center" />
-            <Setter Property="FontSize" Value="14" />
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="Margin" Value="0 0 0 8"/>
         </Style>
     </Grid.Resources>
     <Grid.RowDefinitions>
