--- a/Features/Calendar/CalendarRootView.xaml
+++ b/Features/Calendar/CalendarRootView.xaml
@@ -66,10 +66,8 @@
         <ItemsControl.ItemTemplate>
             <DataTemplate>
                 <Border x:Name="Border"
-                        BorderThickness="0"
-                        Margin="10 5 0 5"
-                        CornerRadius="8"
-                        Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}">
+                        Margin="{adonisUi:Space 1.5, 0.5}"
+                        Style="{DynamicResource Styles.HoverableBorder}">
                     <Border.Visibility>
                         <MultiBinding Converter="{StaticResource MultiBoolToVisibility}">
                             <Binding RelativeSource="{RelativeSource AncestorType=Grid}"
@@ -87,6 +85,7 @@
                 <ScrollViewer CanContentScroll="False"
                               Padding="{TemplateBinding Padding}"
                               Focusable="False"
+                              adonisExtensions:ScrollViewerExtension.VerticalScrollBarPlacement="Overlay"
                               adonisExtensions:ScrollViewerExtension.VerticalScrollBarExpansionMode="NeverExpand">
                     <ItemsPresenter />
                 </ScrollViewer>
