--- a/Features/Standings/StandingsTableView.xaml
+++ b/Features/Standings/StandingsTableView.xaml
@@ -6,16 +6,16 @@
               xmlns:local="clr-namespace:F1Desktop.Features.Standings"
               xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
               xmlns:s="https://github.com/canton7/Stylet"
-              xmlns:adonisExtensions="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
+              xmlns:adonisExt="clr-namespace:AdonisUI.Extensions;assembly=AdonisUI"
               mc:Ignorable="d"
               d:DataContext="{d:DesignInstance local:StandingsTableViewModel}"
               ItemsSource="{Binding Standings}">
     <ItemsControl.ItemTemplate>
         <DataTemplate>
             <Border x:Name="Border"
+                    Style="{DynamicResource Styles.HoverableBorder}"
                     Margin="{adonisUi:Space 1, 0.2}"
                     Padding="{adonisUi:Space 1, 1}"
-                    CornerRadius="8"
                     MouseLeftButtonDown="{s:Action OpenWiki}"
                     s:View.ActionTarget="{Binding}">
                 <Grid UseLayoutRounding="True">
@@ -49,22 +49,6 @@
                                HorizontalAlignment="Right"
                                FontWeight="Bold" />
                 </Grid>
-                <Border.Style>
-                    <Style>
-                        <Setter Property="Border.Background"
-                                Value="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}" />
-                        <Setter Property="Border.BorderBrush"
-                                Value="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}"/>
-                        <Style.Triggers>
-                            <Trigger Property="Border.IsMouseOver" Value="True">
-                                <Setter Property="Border.Background"
-                                        Value="{DynamicResource {x:Static adonisUi:Brushes.Layer1IntenseHighlightBrush}}" />
-                                <Setter Property="Border.BorderThickness"
-                                        Value="5 0 5 0"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </Border.Style>
             </Border>
         </DataTemplate>
     </ItemsControl.ItemTemplate>
@@ -77,8 +61,8 @@
         <ControlTemplate TargetType="ItemsControl">
             <ScrollViewer CanContentScroll="False"
                           Focusable="False"
-                          adonisExtensions:ScrollViewerExtension.VerticalScrollBarPlacement="Overlay"
-                          adonisExtensions:ScrollViewerExtension.VerticalScrollBarExpansionMode="NeverExpand">
+                          adonisExt:ScrollViewerExtension.VerticalScrollBarPlacement="Overlay"
+                          adonisExt:ScrollViewerExtension.VerticalScrollBarExpansionMode="NeverExpand">
                 <ItemsPresenter />
             </ScrollViewer>
         </ControlTemplate>
