--- a/Styles/Styles.xaml
+++ b/Styles/Styles.xaml
@@ -6,9 +6,10 @@
         <ResourceDictionary Source="pack://application:,,,/Styles/CountdownElement.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Styles/HighlightableTextBlock.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Styles/TransitioningContentControl.xaml"/>
-        <ResourceDictionary Source="pack://application:,,,/Styles/ListBoxItemStyle.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/Styles/NavigationListBoxItem.xaml"/>
         <ResourceDictionary Source="pack://application:,,,/Styles/ContentSwitcher.xaml"/>
-        <ResourceDictionary Source="pack://application:,,,/Styles/ToolbarBorderStyle.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/Styles/ToolbarBorder.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/Styles/HoverableBorder.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     <Style BasedOn="{StaticResource Styles.CountdownElement}" TargetType="{x:Type controls:CountdownElement}"/>
     <Style BasedOn="{StaticResource Styles.CountdownControl}" TargetType="{x:Type controls:CountdownControl}"/>
