--- a/Features/Settings/SettingsRootView.xaml
+++ b/Features/Settings/SettingsRootView.xaml
@@ -18,6 +18,7 @@
     </Grid.Resources>
     <Grid.ColumnDefinitions>
         <ColumnDefinition Width="1*" />
+        <ColumnDefinition Width="Auto"/>
         <ColumnDefinition Width="1*" />
     </Grid.ColumnDefinitions>
     <Grid.RowDefinitions>
@@ -46,6 +47,12 @@
                           IsChecked="{Binding Use24HourClock}" />
         </DockPanel>
     </StackPanel>
-    <TextBlock Grid.Row="0" Grid.Column="1" Text="Credits" Style="{DynamicResource HeaderStyle}" />
-    <ContentControl Grid.Row="1" Grid.Column="1" s:View.Model="{Binding Credits}" />
+    <Border Grid.RowSpan="2" 
+            Grid.Row="0" 
+            Grid.Column="1"
+            Width="1"
+            Margin="0 10 0 10"
+            Background="{DynamicResource {x:Static adonisUi:Brushes.Layer1BorderBrush}}"/>
+    <TextBlock Grid.Row="0" Grid.Column="2" Text="Credits" Style="{DynamicResource HeaderStyle}" />
+    <ContentControl Grid.Row="1" Grid.Column="2" s:View.Model="{Binding Credits}" />
 </Grid>
