--- a/Styles/HoverableBorder.xaml
+++ b/Styles/HoverableBorder.xaml
@@ -1,17 +1,27 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI">
-    <Style TargetType="Border" x:Key="Styles.HoverableBorder">
+    <Style TargetType="Border" 
+           x:Key="Styles.HoverableBorder.NoInteraction">
         <Setter Property="CornerRadius" Value="0 8 8 0"/>
         <Setter Property="BorderThickness" Value="4 0 0 0"/>
         <Setter Property="Background" Value="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}" />
         <Setter Property="BorderBrush" Value="{DynamicResource {x:Static adonisUi:Brushes.Layer1BackgroundBrush}}" />
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background"
-                        Value="{DynamicResource {x:Static adonisUi:Brushes.Layer1HighlightBrush}}" />
                 <Setter Property="BorderBrush"
                         Value="{DynamicResource {x:Static adonisUi:Brushes.AccentBrush}}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <Style TargetType="Border" 
+           x:Key="Styles.HoverableBorder"
+           BasedOn="{StaticResource Styles.HoverableBorder.NoInteraction}">
+        <Setter Property="Cursor" Value="Hand"/>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background"
+                        Value="{DynamicResource {x:Static adonisUi:Brushes.Layer1HighlightBrush}}" />
             </Trigger>
         </Style.Triggers>
     </Style>
